# MultiUserClaw

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  build-frontend.sh  call_agent_api.py  deploy.sh  deploy_docker.py  docker-compose.yml  multi_user.md  prepare.py  start_local.py
bridge/: Dockerfile  config.ts  entrypoint.sh  gateway-client.ts  package-lock.json  package.json  server.ts  start.ts  tsconfig.json  types.d.ts  utils.ts
bridge/office/: index.ts  status-reporter.ts
bridge/routes/: agents.ts  channels.ts  commands.ts  curated-skills.ts  files.ts  marketplaces.ts  nodes.ts  plugins.ts  reviews.ts  sessions.ts  settings.ts  skills.ts  status.ts  workspace.ts
doc/: CHANGES_LOG.md
docs/: AIONUI_MULTI_AGENT_ARCHITECTURE.md  CURATED_STORE_SERVICE.md  REQUIREMENTS.md  REVIEW_AI_ENHANCEMENT.md  REVIEW_BATCH.md  REVIEW_CHAT_SUBMIT.md  REVIEW_DIFF_MODE.md  REVIEW_PRIORITY_QUEUE.md  REVIEW_SANDBOX.md  SKILL_BUNDLES.md  STAR_OFFICE_UI_INTEGRATION_ANALYSIS.md  TODO_SKILL_REVIEW.md  nanobot-ts.md
frontend/: .build-cache-hash  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/app/: globals.css  page.tsx
openclaw/: .gitignore  Dockerfile.bridge
platform/: pyproject.toml
platform/app/: config.py  main.py
platform/app/auth/: dependencies.py  service.py
platform/app/container/: manager.py
platform/app/db/: models.py
platform/app/llm_proxy/: service.py
platform/app/office/: __init__.py  store.py
platform/app/routes/: admin.py  auth.py  llm.py  notifications.py  office.py  proxy.py  skills.py
(+54 files in other folders)
